# pocketpaw

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  pr-quality-gate.yml  publish.yml
client/: package-lock.json  package.json
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/capabilities/: default.json
client/src-tauri/src/: commands.rs  lib.rs
client/src/lib/components/chat/: ChatPanel.svelte
client/src/lib/components/onboarding/: SetupBackend.svelte
client/src/lib/stores/: connection.svelte.ts  sessions.svelte.ts
client/src/lib/utils/: logger.ts
deploy/discord/: .env.example  Dockerfile  docker-compose.yaml
deploy/discord/identity/: IDENTITY.md  INSTRUCTIONS.md
docs/: README.md  docs-config.json
docs/api/: configuration-reference.mdx  get-agent-status-stream.mdx  get-agent-status.mdx  index.mdx
docs/backends/: claude-sdk.mdx  copilot-sdk.mdx  deep-agents.mdx  google-adk.mdx  index.mdx  openai-agents.mdx
docs/channels/: discord.mdx
docs/concepts/: llm-providers.mdx
docs/desktop-client/: api-server.mdx  development.mdx  index.mdx  installation.mdx
docs/getting-started/: configuration.mdx
docs/guides/: discord-ai-bot.mdx
scripts/: smoke_test.sh
src/pocketpaw/: __main__.py  config.py  credentials.py  dashboard.py  dashboard_auth.py  dashboard_channels.py  dashboard_lifecycle.py  dashboard_state.py  dashboard_ws.py  discord_gateway.py  headless.py  recent_files.py  status.py  usage_tracker.py
src/pocketpaw/a2a/: client.py  models.py
src/pocketpaw/agents/: claude_sdk.py  codex_cli.py  copilot_sdk.py  delegation.py  google_adk.py  loop.py  model_router.py  openai_agents.py  tool_bridge.py
src/pocketpaw/api/: serve.py
src/pocketpaw/api/oauth2/: server.py
src/pocketpaw/api/v1/: __init__.py  agent_status.py  auth.py  files.py  soul.py
src/pocketpaw/api/v1/schemas/: files.py  status.py
src/pocketpaw/bootstrap/: context_builder.py  default_provider.py  discord.md
src/pocketpaw/bus/: commands.py
src/pocketpaw/bus/adapters/: discord_adapter.py
src/pocketpaw/cli/: __init__.py  status.py
src/pocketpaw/frontend/js/: app.js  websocket.js
src/pocketpaw/frontend/js/features/: channels.js  file-browser.js
src/pocketpaw/frontend/templates/: base.html
src/pocketpaw/frontend/templates/components/: chat.html
src/pocketpaw/frontend/templates/components/modals/: channels.html  file_browser.html  file_viewer.html  settings.html
src/pocketpaw/health/: checks.py  playbooks.py
src/pocketpaw/integrations/: spotify.py
src/pocketpaw/llm/: client.py
src/pocketpaw/llm/providers/: __init__.py  anthropic.py  base.py  gemini.py  litellm.py  ollama.py  openai_compat.py  openrouter.py  registry.py
src/pocketpaw/mcp/: discord_server.py
src/pocketpaw/memory/: mem0_store.py
src/pocketpaw/paw/: cli.py  config.py  soul_bridge.py
src/pocketpaw/soul/: __init__.py  manager.py
src/pocketpaw/tools/: cli.py  fetch.py  policy.py
src/pocketpaw/tools/builtin/: __init__.py  a2a_delegate.py  delegate.py  deliver.py  discord.py  filesystem.py  gdrive.py  pip_install.py  python_exec.py
src/pocketpaw/vectordb/: __init__.py  chroma_adapter.py  protocol.py
tests/: test_a2a_client.py  test_api_cors.py  test_api_serve.py  test_api_v1_auth.py  test_api_v1_files.py  test_auth_exception_logging.py  test_backend_registry.py  test_codex_cli_backend.py  test_config_validation.py  test_copilot_sdk_backend.py  test_credentials.py  test_deliver_artifact.py  test_discord_adapter.py  test_edit_file.py  test_extras_install.py  test_fast_path.py  test_fetch_security.py  test_install_package.py  test_integration_headless.py  test_media_attachments.py  test_model_router.py  test_paw_bridge.py  test_provider_adapters.py  test_recent_files.py  test_run_python.py  test_soul_integration.py  test_soul_manager.py  test_status_api.py  test_status_tracker.py  test_tool_policy.py  test_usage_tracker.py  test_vectordb.py
