[package]
name = "pocketpaw-client"
version = "0.1.0"
description = "PocketPaw Desktop Client"
authors = ["you"]
edition = "2021"

[lib]
name = "pocketpaw_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-os = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
regex = "1"
notify = "7"
image = { version = "0.25", features = ["jpeg", "png", "gif", "webp", "bmp"] }
base64 = "0.22"
sha2 = "0.10"
walkdir = "2"
ureq = "3"
url = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-positioner = "2.3.1"
window-vibrancy = "0.7"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_HiDpi",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_Graphics_Gdi",
] }
